# code

./: PLAN.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
app/: __init__.py  engine.py  exporters.py  learning.py  main.py  schemas.py
python-api/: main.py  requirements.txt
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_api.py
